<resources>
    <string name="app_name">Merchant</string>
    <string name="order">Order</string>
    <string name="menu_manager">Menu Manager</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="notification">Notification</string>
    <string name="add_new">Add new</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="dish_name">Dish name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_dish">Add dish</string>
    <string name="enter_dish_name">Enter dish name</string>
    <string name="enter_dish_price">Enter dish price</string>
    <string name="waiting">Waitting</string>
    <string name="cancel">Cancel</string>
    <string name="history">History</string>
    <string name="total">Total</string>
    <string name="customer_name">Customer name</string>
    <string name="address_delivery">Address delivery</string>
    <string name="note">Note</string>
    <string name="call_customer">Call customer</string>
    <string name="receive">Receive</string>
    <string name="wait_shipper">Wait shipper</string>
    <string name="wait_dish">Wait dish</string>
    <string name="shipping">Shipping</string>
    <string name="shipper_name">Shipper name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="rate">Rate</string>
    <string name="call_shipper">Call shipper</string>
    <string name="dish">dish</string>
    <string name="login">Login</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="confirm">Confirm</string>
    <string name="notify_phone_number">Phone number must be 10 characters</string>
    <string name="add_option">Add option</string>
    <string name="option_dish">Option Dish</string>
    <string name="choose_1">Choose 1</string>
    <string name="choose_more">Choose more</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="please_enter_dish_name">Please enter dish name</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="please_add_avatar">Please add avatar for dish</string>
    <string name="enter_description">Enter your description...</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="options">Options:</string>
    <string name="new_order">New Order</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="zalopay">ZaloPay</string>
    <string name="login_phone">Login with phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="incorrect_login">Incorrect email or password</string>
    <string name="merchant_name">Name</string>
    <string name="address">Address</string>
    <string name="account_balance">Account balance</string>
    <string name="submit_money">Submit a withdrawal request</string>
    <string name="open_time">Open time</string>
    <string name="close_time">Close time</string>
    <string name="logout">Logout</string>
    <string name="with_draws">With draws</string>
    <string name="notify_not_enough_money">You don\'t have enough money</string>
    <string name="processing">Processing...</string>
    <string name="total_value_orders">Total value of orders</string>
    <string name="monthly_income">Monthly income</string>
    <string name="total_orders">Total orders</string>
    <string name="orders">orders</string>
    <string name="month_01">Jan</string>
    <string name="month_02">Feb</string>
    <string name="month_03">Mar</string>
    <string name="month_04">Apr</string>
    <string name="month_05">May</string>
    <string name="month_06">Jun</string>
    <string name="month_07">Jul</string>
    <string name="month_08">Aug</string>
    <string name="month_09">Sep</string>
    <string name="month_10">Oct</string>
    <string name="month_11">Nov</string>
    <string name="month_12">Dec</string>
    <string name="notify_value_invalid">Enter value is invalid</string>
    <string name="notify_exit">Press back again to exit</string>
    <string name="notify_sign_out">Sign out success</string>
</resources>