<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/file_text"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/book_open"
            android:title="@string/menu_manager" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/trending_up"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/setting"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/log_out"
            android:title="@string/exit"/>
    </group>
</menu>