<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_order">

    <fragment
        android:id="@+id/nav_order"
        android:name="com.hcmus.fit.merchant.ui.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.hcmus.fit.merchant.ui.MenuFragment"
        android:label="@string/menu_manager"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.hcmus.fit.merchant.ui.ReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.hcmus.fit.merchant.ui.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.hcmus.fit.merchant.ui.ExitFragment"/>
</navigation>