<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/ic_logo_1"
        android:scaleType="fitCenter"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/sign_in_phone"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_sky"
        android:text="@string/login_phone"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_login_phone"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_transparent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_transparent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white" />
</LinearLayout>