<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/tv_option_name"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/option_dish"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"/>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/edt_item_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/bg_edit_transparent"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/edt_item_price"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:padding="5dp"
            android:inputType="number"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/bg_edit_transparent"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_item"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/green_light"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/bg_btn_border_green"/>
</LinearLayout>