<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray_light">
            <ImageButton
                android:id="@+id/btn_avatar_dish"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_btn_transparent"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_choose_avatar"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/lb_dish_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/dish_name"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>
                    <EditText
                        android:id="@+id/edit_dish_name"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@color/transparent"
                        android:hint="@string/enter_dish_name"
                        android:textAlignment="viewEnd"
                        android:textSize="15sp"
                        android:textColor="@color/grey"
                        android:fontFamily="@font/roboto_regular"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/gray_light" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/lb_dish_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/price"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_regular"/>
                    <EditText
                        android:id="@+id/edit_price"
                        android:layout_width="265dp"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/lb_unit"
                        android:background="@color/transparent"
                        android:hint="@string/enter_dish_price"
                        android:layout_marginEnd="5dp"
                        android:inputType="number"
                        android:textAlignment="viewEnd"
                        android:textSize="15sp"
                        android:textColor="@color/grey"
                        android:fontFamily="@font/roboto_regular"/>

                    <TextView
                        android:id="@+id/lb_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="đ"
                        android:textSize="15sp"
                        android:textColor="@color/grey"
                        android:fontFamily="@font/roboto_regular"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/gray_light" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/lb_dish_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/category"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular" />

                    <Spinner
                        android:id="@+id/sn_category"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_toStartOf="@+id/btn_add_category"
                        android:textAlignment="viewStart"
                        android:layout_marginEnd="10dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/bg_btn_border_green"
                        android:spinnerMode="dropdown" />

                    <ImageButton
                        android:id="@+id/btn_add_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_increase"
                        android:background="@drawable/bg_btn_white"
                        android:scaleType="fitXY"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">
                <TextView
                    android:id="@+id/lb_dish_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/status"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"/>
                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/btn_status"
                    android:layout_marginEnd="5dp"
                    android:layout_centerVertical="true"
                    android:text="@string/available"
                    android:textSize="15sp"
                    android:textColor="@color/green_light"
                    android:fontFamily="@font/roboto_regular"/>

                <Switch
                    android:id="@+id/btn_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_add_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">
                <Button
                    android:id="@+id/btn_add_option"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/bg_btn_border_green"
                    android:text="@string/add_option"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/green_dark"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp">
                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:hint="@string/enter_description"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/grey"
                    android:textAlignment="viewStart"
                    android:maxLines="2"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/gray_light"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp">
                <Button
                    android:id="@+id/btn_delete_dish"
                    android:layout_width="265dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_btn_white"
                    android:layout_centerHorizontal="true"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/red"/>
                <Button
                    android:id="@+id/btn_update_dish"
                    android:layout_width="165dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_btn_white"
                    android:layout_alignParentEnd="true"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/green_dark"
                    android:visibility="gone"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_add_dish"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/bg_btn_primary"
                android:text="@string/add_dish"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>